--- a/my-vue/src/assets/css/public.css
+++ b/my-vue/src/assets/css/public.css
@@ -3,8 +3,8 @@ html,body{width:100%;height: 100%;}
 html{font-size: 31.25vw;}
 li{list-style: none}
 #app{display: flex;flex-direction: column;height: 100%;font-size:16px;}
-.header{width:100%;height: 0.5rem;background: #00a7ff;display: flex;justify-content: space-between;align-items: center;
-color:#fff;display: flex;justify-content: space-between;align-items: center;padding:0 0.08rem;}
+.header{width:100%;height: 0.4rem;background: #00a7ff;display: flex;justify-content: space-between;align-items: center;
+color:#fff;display: flex;justify-content: space-between;align-items: center;padding:0 0.08rem;font-weight: bold;font-size: 0.15rem;}
 .section{flex: 1;overflow-y: auto;}
 .footer{height:0.5rem;border-top:1px solid #333;}
 .footer ul{display: flex; justify-content: space-around;overflow: hidden}
