--- a/my-vue/src/assets/css/public.css
+++ b/my-vue/src/assets/css/public.css
@@ -1,10 +1,12 @@
 html,body{width:100%;height: 100%;}
 *{box-sizing: border-box;margin:0;padding:0;}
+input,button{
+	outline: none;
+}
 html{font-size: 31.25vw;}
 li{list-style: none}
 #app{display: flex;flex-direction: column;height: 100%;font-size:16px;}
-.header{width:100%;height: 0.4rem;background: #00a7ff;display: flex;justify-content: space-between;align-items: center;
-color:#fff;display: flex;justify-content: space-between;align-items: center;padding:0 0.08rem;font-weight: bold;font-size: 0.15rem;}
+.header{width:100%;height: 0.4rem;background: #00a7ff;display: flex;justify-content: space-between;align-items: center;color:#fff;padding:0 0.08rem;font-weight: bold;font-size: 0.15rem;text-align: center;}
 .section{flex: 1;overflow-y: auto;}
 .footer{height:0.5rem;border-top:1px solid #333;}
 .footer ul{display: flex; justify-content: space-around;overflow: hidden}
