--- a/my-vue/src/assets/css/public.css
+++ b/my-vue/src/assets/css/public.css
@@ -7,7 +7,7 @@ html{font-size: 31.25vw;overflow: hidden}
 li{list-style: none}
 a{text-decoration: none;color:#000;}
 #app{display: flex;flex-direction: column;height: 100%;font-size:16px;}
-.header{width:100%;height: 0.4rem;background: #00a7ff;display: flex;justify-content: space-between;align-items: center;color:#fff;padding:0 0.08rem;font-weight: bold;font-size: 0.15rem;text-align: center;}
+.header{width:100%;min-height: 0.4rem;background: #00a7ff;display: flex;justify-content: space-between;align-items: center;color:#fff;padding:0 0.08rem;font-weight: bold;font-size: 0.15rem;text-align: center;}
 
 .section{flex: 1;overflow-y: auto;}
 .footer{height:0.5rem;border-top:1px solid #333;}
